--- a/package.json
+++ b/package.json
@@ -17,21 +17,29 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "jest": "^29.6.2",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.27",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.1.1",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
+    "scss": "^0.2.4",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "scss": "^0.2.4"
+    "@babel/polyfill": "^7.12.1"
   },
   "browserslist": "> 1%, last 2 versions, not dead"
 }
