--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:prod": "set NODE_ENV=production&&webpack",
     "clear": "rd /s /q dist",
     "test": "jest",
-    "lint": "eslint src"
+    "lint": "eslint \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "keywords": [],
   "author": {
@@ -22,7 +23,10 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
+    "eslint-plugin-import": "^2.28.0",
+    "group-css-media-queries-loader": "^4.3.0",
     "html-loader": "^4.2.0",
+    "html-webpack-partials-plugin": "^0.8.0",
     "html-webpack-plugin": "^5.5.3",
     "image-webpack-loader": "^8.1.0",
     "jest": "^29.6.2",
@@ -30,6 +34,8 @@
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.1",
+    "prettier": "^3.0.1",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
     "scss": "^0.2.4",
