Added corrections to package.json, webpack.config.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["gifsicle", "mozjpeg", "optipng", "pngquant"]
+  "cSpell.words": ["gifsicle", "mozjpeg", "optipng", "pngquant"],
+  "liveServer.settings.port": 5501
 }
